fix: fixing dynamic path in swagger
